[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-counter"
version = "0.1.0"
description = "Count tokens and calculate API costs for AI models - know costs BEFORE sending requests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Viprasol", email = "hello@viprasol.com"}]
keywords = ["ai", "llm", "tokens", "cost-calculator", "claude", "openai", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
token-counter = "token_counter.core:main"

[project.urls]
Homepage = "https://viprasol.com"
Repository = "https://github.com/viprasol/token-counter"
Documentation = "https://docs.viprasol.com/token-counter"
Issues = "https://github.com/viprasol/token-counter/issues"

[tool.setuptools]
packages = ["token_counter"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
